chore: Improve javadoc and refactor for consistency